# SageMath-for-VScode

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
.claude/: index.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CONTRIBUTING.md  README-zh-CN.md
examples/: README.md  algebra.sage  basic.sage  crypto.sage
llmdoc/: index.md
llmdoc/architecture/: extension-lifecycle.md  extension-overview.md  lexical-analysis.md  lsp-capabilities.md  lsp-overview.md  sage-discovery.md  semantic-analysis.md  semantic-tokens.md  syntax-highlighting-overview.md  (+2 more)
readmes/: README-zh-CN.md  SemanticHighlighting-en.md  SemanticHighlighting-zh-CN.md
server/: lsp.py  utils.py
snippets/: sagemath.json
src/: CLAUDE.md  extension.ts  sageDiscovery.ts
src/server/: CLAUDE.md  code_actions.py  documentation.py  lsp.py  predefinition.py  pyproject.toml  requirements.txt  symbols.py  utils.py
src/server/env-lsp/: pyvenv.cfg
src/server/env-lsp/Scripts/: activate  activate.bat
src/server/tests/: README.md  __init__.py  conftest.py  test_code_actions.py  test_documentation.py  test_lsp.py  test_lsp_protocol.py  test_predefinition.py  test_symbols.py  test_utils.py
syntaxes/: sagemath.tmLanguage.json
(+28 files in other folders)
